# MachineDemoLib

./: CMakeLists.txt  ControlPanel.cpp  ControlPanel.h  Controller.cpp  Controller.h  IMachineIsolator.h  IMachineSystemIsolator.h  MachineDemoBaseApp.cpp  MachineDemoBaseApp.h  MachineDemoMainFrame.cpp  MachineDemoMainFrame.h  MachineView.cpp  MachineView.h
resources/xrc/: main.fbp  main.xrc
